Tried to fix popular section alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,7 +201,7 @@ main {
 #accomodation h2 {
   width: 100%;
 
-  padding-left: 80px;
+  padding-left: 40px;
 }
 
 .accomodation_card {
@@ -287,6 +287,9 @@ main {
 
   padding-left: 80px;
 
+  margin-top: 30px;
+  margin-bottom: 20px;
+
   color: black;
 
   font-size: 20px;
@@ -303,14 +306,16 @@ aside ul {
   list-style-type: none;
 }
 
-/* MOST POPULAR SECTION */
 #popular {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  position: relative;
 
-  width: 30%;
-  min-width: 340px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+
+  /* width: 30%; */
+  min-width: 420px;
 
   border-radius: 20px;
   padding: 10px;
@@ -319,8 +324,9 @@ aside ul {
 }
 
 #popular h2 {
-  padding-left: 15px;
-  margin-bottom: 100px;
+  position: absolute;
+  top: 0;
+  left: 20px;
 }
 
 #popular h2 i {
@@ -328,9 +334,10 @@ aside ul {
 }
 
 .popular_card {
-  min-width: 320px;
+  width: 400px;
+  height: 200px;
 
-  margin: 10px;
+  margin-top: 30px;
 
   border-radius: 20px;
 
@@ -358,19 +365,21 @@ aside ul {
 .popular_card figure {
   display: flex;
   flex-wrap: nowrap;
-  justify-content: space-around;
+
+  margin: 10px;
 
   border-radius: 20px 0 0 20px;
 }
 
 .popular_card figure div {
-  max-height: 200px;
-  max-width: 130px;
+  width: 130px;
+  height: 180px;
 }
 
 .popular_card figure div img {
+  max-width: 130px;
   height: 100%;
-  width: 100%;
+
   object-fit: cover;
 
   border-radius: 10px 0 0 10px;
